copy_to_new_cluster/learn-k8s/7.ingress-ha/2.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
spec:
  tls:
    - hosts:
      - vuan3086.vn
      secretName: vuan3086.vn
  rules:
  - host: vuan3086.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-test-svc
            port:
              number: 80
